--- a/ci/Jenkins/Jenkinsfile
+++ b/ci/Jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
   stages {
     stage('Checkout') {
       steps {
-        git branch: 'main', url: 'https://github.com/abdelbaki-bouzaienne/devops-demo-project.git'
+        git branch: 'main', url: 'https://github.com/OUALINes/devops-demo-project.git'
       }
     }
     stage('Build and Test') {
@@ -44,13 +44,13 @@ pipeline {
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "devops-demo-project"
-            GIT_USER_NAME = "abdelbaki-bouzaienne"
+            GIT_USER_NAME = "OUALINes"
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
-                    git config user.email "abdelbaki.bouzaienne@gmail.com"
-                    git config user.name "abdelbaki-bouzaienne"
+                    git config user.email "nesrine.ouali@efrei.net"
+                    git config user.name "OUALINes"
                     sed -i "s/tag: .*/tag: \"${build_version}\"/" helm/app/values.yaml
                     git add helm/app/values.yaml
                     git commit -m "Update deployment image to version ${build_version}"
