--- a/helm/app/values.yaml
+++ b/helm/app/values.yaml
@@ -5,11 +5,10 @@
 replicaCount: 2
 
 image:
-  githubID: deepakkr35
   repository: demo-java-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 
+  tag:"v1.0"
 
 appName: demo-java-app
 
