--- a/helm/app/values.yaml
+++ b/helm/app/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 2
 
 image:
   githubID: OUALINes
-  repository: demo-java-app
+  repository: oualines/demo-java-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: 
