--- a/ci/Jenkins/Jenkinsfile
+++ b/ci/Jenkins/Jenkinsfile
@@ -51,7 +51,7 @@ pipeline {
                 sh '''
                     git config user.email "nesrine.ouali@efrei.net"
                     git config user.name "OUALINes"
-                    sed -i "s/tag: .*/tag: \"${build_version}\"/" helm/app/values.yaml
+                    sed -i "s/tag: .*/tag: \\"${build_version}\\"/" helm/app/values.yaml
                     git add helm/app/values.yaml
                     git commit -m "Update deployment image to version ${build_version}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
