--- a/helm/app/values.yaml
+++ b/helm/app/values.yaml
@@ -9,7 +9,7 @@ image:
   repository: oualines/demo-java-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 
+  tag: ""
 
 appName: demo-java-app
 
